# adventofcode2020

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/day1/: CMakeLists.txt
src/day2/: CMakeLists.txt  main.cpp
src/day3/: CMakeLists.txt  main.cpp
src/day4/: CMakeLists.txt  main.cpp
src/day5/: CMakeLists.txt  main.cpp
src/day6/: CMakeLists.txt  main.cpp
src/day7/: CMakeLists.txt  main.cpp
src/day8/: CMakeLists.txt  main.cpp
